# rustdotenv

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/test_data/: test1.env  test2.env
